todos from meetin on okt 10

--- a/_MOB_paper.Rnw
+++ b/_MOB_paper.Rnw
@@ -30,7 +30,7 @@
 \authorsnames{Marjolein Fokkema$^1$, Mirka Henninger$^2$ \& Carolin Strobl$^2$}
 \authorsaffiliations{$^1$Leiden University, $^2$Universit\"at Z\"urich}
 
-\abstract{Model-based recursive partitioning \citep[MOB,][]{ZeilyHoth08} is a flexible framework for detecting subgroups \edc{of persons showing different} effects in a wide range of parametric models. It provides a versatile tool for detecting and explaining heterogeneity of intervention effects. In this tutorial paper, we provide an introduction to the general MOB framework. In two specific case studies, we show how MOB-based methods can be used to detect and explain heterogeneity in two widely-used frameworks in educational studies: mixed-effects and item response theory models. In the first case study, we show how GLMM trees \citep{FokkySmit18} can be used to detect subgroups with different parameters in mixed-effects models. We apply GLMM trees to a dataset from a study of \citep{Demi09}, who compared longitudinal performance of siblings who did, and siblings who did not participate in the Head Start program. Using GLMM trees, we identify subgroups of families in which children show comparatively larger or smaller gains in performance following participation in Head Start. In a second case study, we show how Rasch trees \citep{StroyKopf15} can be used to detect subgroups with different item parameters in IRT models, \edc{i.e.~differential item functioning (DIF).
+\abstract{Model-based recursive partitioning \citep[MOB,][]{ZeilyHoth08} is a flexible framework for detecting subgroups \edc{of persons showing different} effects in a wide range of parametric models. It provides a versatile tool for detecting and explaining heterogeneity of intervention effects. In this tutorial paper, we provide an introduction to the general MOB framework. In two specific case studies, we show how MOB-based methods can be used to detect and explain heterogeneity in two widely-used frameworks in educational studies: mixed-effects and item response theory models. In the first case study, we show how GLMM trees \citep{FokkySmit18} can be used to detect subgroups with different parameters in mixed-effects models. We apply GLMM trees to a dataset from a study of \citep{Demi09}\todo{take that out?}, who compared longitudinal performance of siblings who did, and siblings who did not participate in the Head Start program. Using GLMM trees, we identify subgroups of families in which children show comparatively larger or smaller gains in performance following participation in Head Start. In a second case study, we show how Rasch trees \citep{StroyKopf15} can be used to detect subgroups with different item parameters in IRT models, \edc{i.e.~differential item functioning (DIF).
 DIF should be investigated before using test results for comparing groups, because undetected DIF can affect test fairness.} We show how a recently developed stopping criterion \citep{HennyDeba23} can be used to guide subgroup detection based on DIF effect sizes.\\}
 
 \begin{document}
@@ -66,7 +66,7 @@ In the following section, we will give a short introduction into the algorithm a
 
 \section{The Algorithm Behind MOB}
 
-What you see displayed in Figures~\ref{fig:lmm_tree}, \ref{fig:math_tree}, and \ref{fig:read_tree}\todo{adjust if raschtree example changes (Mirka: maybe it would be helpful to have a simplified figure of a GLMERtree and a Raschtree early in the manuscript already, so we can refer to it here?)}, which will be explained in detail in the application example sections, is the result of the MOB algorithm for a linear mixed-effects model (Figure~\ref{fig:lmm_tree}) and for a binary Rasch model (Figures~\ref{fig:math_tree} and \ref{fig:read_tree}). These figures share the tree-structure in the upper part, but differ in their lower part. The starting point of the tree structure is at the very top of each tree. The very top of each tree is called the root node, so what you see are actually ``upside down'' trees with the root at the top and the branches at the 
+What you see displayed in Figures~\ref{fig:lmm_tree}, \ref{fig:math_tree}, and \ref{fig:read_tree}\todo{adjust if raschtree example changes (Mirka: maybe it would be helpful to have a simplified figure of a GLMERtree and a Raschtree early in the manuscript already, so we can refer to it here?); Marjolein: please read and decide whether we do need a picture of a regression tree and/or mob tree here, if yes, simulate but with abstract x1 x2, no story}, which will be explained in detail in the application example sections, is the result of the MOB algorithm for a linear mixed-effects model (Figure~\ref{fig:lmm_tree}) and for a binary Rasch model (Figures~\ref{fig:math_tree} and \ref{fig:read_tree}). These figures share the tree-structure in the upper part, but differ in their lower part. The starting point of the tree structure is at the very top of each tree. The very top of each tree is called the root node, so what you see are actually ``upside down'' trees with the root at the top and the branches at the 
 bottom. The root node at the very top contains the entire sample of persons in the data set. From there, the persons are divided into subgroups.
 
 The subgroups are defined by the covariates that are used for splitting and together with cutpoints in those covariates. For example, in Figure~\ref{fig:lmm_tree} for the metric covariates \texttt{AFTQ} and \texttt{Income} a numeric cutpoint has been selected by the MOB algorithm to separate the groups. The algorithm has identified this cutpoint as being the location of the strongest parameter difference between the two resulting groups. The categorical covariate \texttt{Race}, which was coded in three categories in this example, has been divided into two groups of categories: Black and Hispanic vs.~White. For a binary covariate, \todo{like ... -- add name if is there one in the other example?} 
@@ -123,7 +123,7 @@ MOB can be used to detect DIF by means of searching for covariates that display 
 
 If one joint Rasch model holds for the entire sample, i.e., if there is no DIF, a Rasch tree should show no splits. However, in certain settings in educational research, such as large scale assessements, very large sample sizes are available for testing for DIF. Large sample sizes are good for detecting even small effects or model violations with a high statistical power. The same holds for the statistical tests used for detecting parameter change in the MOB algorithm, so that in larger samples even very small parameter differences can be detected with large samples. However, in DIF detection this may mean that even very small DIF effects, that in practice can be considered ignorable, will be detected if only the sample is big enough. As we will illustrate in the first part of application example 2, for a large sample of university students who have taken a quiz to test their general knowledge, this can lead to very large trees, that are hard to interpret and contain splits that would not be considered relevant by measurement experts. Therefore, an extension of Rasch trees has been suggested by \citet{HennyDeba23} based on the Mantel-Haenszel effect size measure for DIF. \citet{HolTha:1985} have suggested an intuitive classification of DIF effect sizes based in the Mantel-Haenszel statistic, that is being widely used in educational testing. In this classification, category A stands for negligible DIF (small effect size or not statistically significant), B for medium DIF (neither A nor C), and C for large DIF (large effect size and statistically significant). \citet{HennyDeba23} have incorporated this classification as an additional stopping criterion for Rasch trees, so that the user can decide, for example, that a split should only be conducted if the detected DIF is of category B or C, while negligible DIF of category A should be ignored. 
 
-As we will show in application example 2, for large sample sizes this can be very helpful because it results in shorter trees that are easier to interpret and contain only splits corresponding to DIF effect sizes considered relevant in practice. Together with a purification step \citep[see][for details]{HennyDeba23}, the Mantel-Haenszel classification can also be used for highlighting those items that show DIF with respect to certain groups of persons graphically. This can help generate hypothesis about the sources of DIF, as we will ilustrate in application example 2, and can also aid the decision how to proceed with the DIF items. 
+As we will show in application example 2, for large sample sizes this can be very helpful because it results in shorter trees that are easier to interpret and contain only splits corresponding to DIF effect sizes considered relevant in practice. Together with a purification step \citep[see][for details]{HennyDeba23} \todo{Caro can add more text on achoring, incl. word anchoring, here to prepare example 2 - only shortly mention here and explain in more detail later in the example (will become more clear in example)}, the Mantel-Haenszel classification can also be used for highlighting those items that show DIF with respect to certain groups of persons graphically. This can help generate hypothesis about the sources of DIF, as we will ilustrate in application example 2, and can also aid the decision how to proceed with the DIF items. 
 \todo[inline]{following text from Caro can be used here or later after example 2 or in discussion}
 For example, items that show DIF between different language groups can often be improved by means of making sure that in all translations the meaning is as similar as possible, that the words employed in the translations for the different languages are equally frequently used, etc. In other situations, sources of DIF might be harder to eliminate, so that often DIF items are excluded from a test. Either way, the measurement model needs to be refitted and its assumptions checked again after the final set of items has been decided upon and, in the case of modified items, administered again. 
 
@@ -299,6 +299,8 @@ knitr::kable(design_df, format = "latex", digits = 2,
 @
 
 To aid interpretation of the coefficients in Figure~\ref{fig:lmm_tree}, Table~\ref{tab:predictions} provides predicted PPVT scores for each of the groups and programs at ages 6 \todo{x axis for age starts at 2?} and 18. All nodes show a modest benefit of Head Start participation at age 6, about 3-4 points on the PPVT. This benefit remains the same over time for the group with lower mother's AFTQ scores. The benefit increases over time for White children with higher mother's AFTQ scores. Strikingly,\todo{possibly less extreme word like: Interestingly,} the benefit decreases over time for Black and Hispanic children with higher mother's AFTQ scores. These results correspond to the conclusions of \cite{Demi09}. \todo[inline]{Generally the effects are not large but the example is very clear and I like that it is an intervention effect. I suggest to state early before the figure that the effects are not large in this example but we are interested in the group differences; also try to make figure bigger and wider to make slopes more visible; (Mirka): I think the main effect of the intervention and the interaction effect is not too small, but it is hard to see because the age effect is so pronounced in this example. Would it be an option to only use the intervention effect in the end nodes? }
+
+\todo[inline]{Marjolein add here comment that typically affect of age is typically strongest; take out next part, but comment on it in discussion: CV would be a technique to see how stable results are, cite something about CV in general}
 
 To evaluate whether the detected subgroups indeed contribute to better predictions, we used cross validation. We \edc{randomly} separated the \Sexpr{length(unique(HS_dat$MotherID))} families in the dataset into ten equally-sized folds. We took nine of the ten folds as a training dataset on which we fitted two models: an LMM tree \edc{like the one shown above} (i.e., an LMM with subgroups \todo{necessary? confused me}) and an LMM without subgroups (comprising main and interaction effects of age and Head Start participation, and a random intercept with respect to child). We evaluated performance on the remaining folds by computing and evaluating accuracy of the predictions. \todo{explain MSE and $R^2$} We repeated this procedure ten times, so that all folds were used as a test set once. The results are presented in Table~\ref{tab:performance}, which shows that LMM trees generalize well: They provide better predictive accuracy compared to LMMs, while implementing only few splits. 
 
@@ -489,20 +491,18 @@ This is interesting, because it is the culture scale. Why should people who stud
 
 In this tutorial paper we have outlined the rationale of the MOB algorithm and how it can be used for detecting parameter differences in mixed-effects and Rasch models. The main advantage of MOB is that it can detect groups of persons with different model parameters in a data driven way. This makes it more flexible for detecting differences that were not hypothesized by the researchers. For example in DIF analysis, it is often the case that any obvious sources of DIF have already been avoided by the content expernts in the item creation phase. Any remaining DIF is unexpected. Therefore, any DIF detection approach that relies on the researchers correctly specifying the exact groups of persons that exhibit DIF can miss DIF if it is associated with other (combinations of) covariates or other cutpoints than the ones investigated. In this sense, a more exploratory approach like a Rasch tree has a higher statistical power to detect DIF in previously unknown groups \citep{StrKopZei:2015:P}. The same holds for parameter differences in mixed-effects models, where the substantial hypothesis are typically about the fixed effects of the interventions, not necessarily about all possible subgroup-specific .... \todo{Marjolein add if this makes any sense here}
 
-\todo[inline]{Write summary of findings.}
+\todo[inline]{Write summary of findings. -- now think: rather not discuss substantive findings, only properties of the methods}
 
 For our two application examples, we could show that MOB can detect ..., performs automated variable selection \todo[inline]{or did you, Marjolein, mean repeat substantive findings? not very exciting for SPISA} 
 
 \todo[inline]{Mention shortcomings.}
-
-not possible to detect certain patterns: XOR problem, known for all trees
 
 stability of trees, small changes in data can lead to quite different looking tree. The tree structure should always be interpreted jointly for all variables: rather than considering the first splitting variable to be the most important one, it is actually the combination of all splitting variables that creates the groups.\todo{in interpretation of trees in examples: do this, point out that it is interactions -- Caro also add in intro?}. The \texttt{stabletree} R package also provides descriptive statistics and graphics that help judge the stability of tree and MOB results \citep{PhiRusHor:2018:JoCaGS,PhiZeiStr:2016}. 
 
 
 \todo[inline]{Write about future work.}
 
-sample size dependence, similar ideas like MH trees also possible for other MOB?
+sample size dependence, similar ideas like MH trees also possible for other MOB? \todo[inline]{possibly Mirka add something about visual interpretation? because effect sizes in mixed effects models are not very clear}
 
 The Mantel-Haenszel effect size measure for DIF will be integrated in the \texttt{psychotools} package. 
 
