Add Interpretation Techniques to DiscussioN

--- a/_MOB_paper.bib
+++ b/_MOB_paper.bib
@@ -1,3 +1,17 @@
+@book{Molnar2019,
+author = {Molnar, Christoph},
+title = {{Interpretable Machine Learning: A Guide for Making Black Box Models Explainable}},
+url = {https://christophm.github.io/interpretable-ml-book},
+year = {2019}
+}
+@article{Henninger2022c,
+author = {Henninger, Mirka and Debelak, Rudolf and Rothacher, Yannick and Strobl, Carolin},
+doi = {10.1037/met0000560},
+file = {:home/mhenninger/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Henninger et al. - 2022 - Interpretable machine learning for psychological research Opportunities and pitfalls.pdf:pdf},
+journal = {Psychological Methods},
+title = {{Interpretable machine learning for psychological research: Opportunities and pitfalls}},
+year = {2023}
+}
 @article{StycyAntr21,
   title={Are ratings in the eye of the beholder? A non-technical primer on many facet {R}asch measurement to evaluate rater effects on teacher behavior rating scales},
   author={Styck, Kara M and Anthony, Christopher J and Flavin, Angela and Riddle, David and LaBelle, Brittany},
